# sisop2

./: .gitignore  CMakeLists.txt  Makefile  README.md  client_app  client_udp_socket.cpp  server_udp_socket.cpp
client/: main_client.cpp
new/: README.md  client_app  server_app
new/src/client/: client_handler.cpp
new/src/services/: DiscoveryService.cpp  DiscoveryService.h  InterfaceService.cpp
new/src/structs/: ClientInfo.h
old/: CMakeLists.txt  README.md
old/client/classes/: Client.cpp
old/socket/classes/: UdpClient.cpp
references/: Makefile  README.md  client_app  server_app
references/src/client/: client_handler  client_handler.cpp
references/src/global_attributes/: Global.h
references/src/server/: server_handler  server_handler.cpp
references/src/services/: ProcessingService.cpp  ProcessingService.h
references/src/structs/: ServerInfo.h
references/src/utils/: Utils.cpp  Utils.h
server/: main_server.cpp
socket/: client_udp_socket.cpp
socket/classes/: UdpClient.cpp  UdpServer.cpp
socket/classes/include/: UdpClient.h  UdpServer.h
socket/include/: packets.h
src/client/: client_handler.cpp
src/global_attributes/: Global.cpp
src/handlers/: ClientHandler.cpp  ClientHandler.h  ServerHandler.cpp  ServerHandler.h
src/server/: server_handler.cpp
src/services/: DiscoveryService.cpp  DiscoveryService.h  InterfaceService.cpp  InterfaceService.h  ProcessingService.cpp  ProcessingService.h
src/structs/: ClientInfo.h  Message.h
src/utils/: Utils.cpp  Utils.h
